--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Kontakt</title>
-
-    <script src="js/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
+<div class="navbar">
+
+</div>
+
+<script src="js/script.js"></script>
 </body>
 </html>
